Fix z-index issue for focusable items and improve focus styles

--- a/src/nationalarchives/utilities/_a11y.scss
+++ b/src/nationalarchives/utilities/_a11y.scss
@@ -5,9 +5,12 @@
   @include a11y.visually-hidden;
 }
 
+*:focus,
 *:focus-visible {
   z-index: 9;
+}
 
+*:focus-visible {
   @include a11y.focus-outline;
 }
 
